--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "lilBunnyRabbit",
   "license": "ISC",
   "dependencies": {
+    "@types/ws": "^7.2.6",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "yaml": "^1.10.0"
